--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
                 <h4>Dawid Cieszewski</h3>
                     <h5>I build web and mobile apps.
                 </h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum voluptates repellendus placeat
-                    numquam itaque explicabo sequi inventore adipisci sed, sint iste!</p>
+                <p>I'm a software engineer from Elbląg, specializing
+                     in building exceptional websites, applications, and everything in between.</p>
+                <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum voluptates repellendus placeat
+                    numquam itaque explicabo sequi inventore adipisci sed, sint iste!</p> -->
                 <a href="#about-me" id="landing-button">show more</a>
             </div>
         </div>
@@ -76,14 +78,14 @@
                 </div>
                 <div class="author-info">
                     <h4>About me</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus, laborum.</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus quasi, eos, ipsum quas vero
-                        consequatur dignissimos accusantium eius fugit culpa, qui ex voluptatem fuga id? Possimus
-                        temporibus nam excepturi ullam.</p>
+                    <p>Hi! I'm Dawid, a software engineer from Elbląg.</p>
+                    <p>I graduated from Państwowa Wyższa Szkola Zawodowa in Elbląg, specialized in Computer Engineering and 
+                        Telecomunication. During my studies I managed to program in many different languages such as: C, C#,
+                         Java, JavaScript, Python.</p>
                         <a name="skills-anchor"></a>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores porro neque aut consequatur
-                        odio, consectetur deserunt ipsa esse quod? Inventore ipsa debitis harum ipsam autem! </p>
-                       
+                        <p>Currently i focus mainly on learing porgramming languages and tools designed to create
+                            and develop modern web pages and mobile applications. 
+                        </p>
                     <p>
                     <p></p>Here are a few technologies I've been working with recently:</p>
                     <div class="skills-wrap">
@@ -120,9 +122,10 @@
                 <div class="project-right">
                     <div class="project-text">
                         <h5>Detectors map</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, impedit.</p>
-                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consequatur omnis cum
-                            reiciendis nobis molestias repudiandae?</p>
+                        <p>Simple map project using recyclerView lists to help navigate between added POIs.</p>
+                        <p>User has funcionalliy to add, edit details and delete POis displayed on the map and in both lists.</p>
+                        <p>Project written in Kotlin using tools such as: </p>
+                        <p> Google Maps SDK, single-activity architecture, MVVM, Room, Jetpack navigation, Dagger Hilt, Coroutines.</p>
                         <a href="https://github.com/Dawidciesz/Biennale-Go" class=""> <img src="git.png" width="38px" alt=""></a>
                     </div>
                     <div class="project-image project-image-right-border">
@@ -135,9 +138,11 @@
                     </div>
                     <div class="project-text">
                         <h5 id="detector-name">Biennale-Go</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, impedit.</p>
-                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consequatur omnis cum
-                            reiciendis nobis molestias repudiandae?</p>
+                        <p>City game developed to popularize Biennal forms.</p>
+                        <p>Game offers users extensive functionality to get familiar with Biennal forms. User has the ability to navigate to forms,
+                             save visited locations, display details about them, solve many quizes, gather points and compere results with other users in ranking list. </p>
+                        <p>Project written in Kotlin using tools such as: </p>
+                        <p>Google Maps SDK, geofencing, Firebase tools including: Firestore, Authentication and Storage.</p>
                         <a href="https://github.com/Dawidciesz/DetectorsMap" class=""> <img src="img/git.png" width="38px" alt=""></a>
                     </div>
                  
