missing img fix

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <p>User has funcionalliy to add, edit details and delete POis displayed on the map and in both lists.</p>
                         <p>Project written in Kotlin using tools such as: </p>
                         <p> Google Maps SDK, single-activity architecture, MVVM, Room, Jetpack navigation, Dagger Hilt, Coroutines.</p>
-                        <a href="https://github.com/Dawidciesz/Biennale-Go" class=""> <img src="git.png" width="38px" alt=""></a>
+                        <a href="https://github.com/Dawidciesz/Biennale-Go" class=""> <img src="img/git.png" width="38px" alt=""></a>
                     </div>
                     <div class="project-image project-image-right-border">
                         <img src="img/detector-map.jpg" width="180px" alt="">
