--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
                         Telecomunication. During my studies I managed to program in many different languages such as: C, C#,
                          Java, JavaScript, Python.</p>
                         <a name="skills-anchor"></a>
-                        <p>Currently i focus mainly on learing porgramming languages and tools designed to create
+                        <p>Currently I focus mainly on learing programming languages and tools designed to create
                             and develop modern web pages and mobile applications. 
                         </p>
                     <p>
-                    <p></p>Here are a few technologies I've been working with recently:</p>
+                    <p></p>Here are a few technologies that I've been recently working with:</p>
                     <div class="skills-wrap">
                         <ul>
                             <li>
@@ -136,7 +136,7 @@
                     <div class="project-text">
                         <h5 id="detector-name">Biennale-Go</h5>
                         <p>City game developed to popularize Biennal forms.</p>
-                        <p>Game offers users extensive functionality to get familiar with Biennal forms. User has the ability to navigate to forms,
+                        <p>Game offers users extensive functionality to get familiar with Biennal forms. User has the ability to navigate to the forms,
                              save visited locations, display details about them, solve many quizes, gather points and compere results with other users in ranking list. </p>
                         <p>Project written in Kotlin using tools such as: </p>
                         <p>Google Maps SDK, geofencing, Firebase tools including: Firestore, Authentication and Storage.</p>
@@ -153,8 +153,8 @@
             <h4>Contact info</h4>
             <p>I'm looking for work! I'm currently looking for a web developer internship or a junior Android developer position.</p>
             <div class="contact-buttons">
-            <a href="#" class="contact-button">resume</a>
-            <a href="#" class="contact-button">email</a>
+            <a href="/img/CV_Dawid_Cieszewski.pdf" class="contact-button">resume</a>
+            <a href="mailto: dawidcieszewski@gmail.com" class="contact-button">email</a>
             <a href="https://github.com/Dawidciesz" class="contact-button">github</a>
         </div>
         </div>
