--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <h4>Contact info</h4>
             <p>I'm looking for work! I'm currently looking for a web developer internship or a junior Android developer position.</p>
             <div class="contact-buttons">
-            <a href="/img/CV_Dawid_Cieszewski.pdf" class="contact-button">resume</a>
+            <a href="/img/CV_Dawid_Cieszewski.pdf" class="contact-button" download>resume</a>
             <a href="mailto: dawidcieszewski@gmail.com" class="contact-button">email</a>
             <a href="https://github.com/Dawidciesz" class="contact-button">github</a>
         </div>
